--- a/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/BuildingEscape/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,7 +103,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/FirstLevel
 
 [ModuleFileTracking]
-BuildingEscape.TimeStamp=2020.07.22-16.19.50
+BuildingEscape.TimeStamp=2020.07.28-15.36.45
 BuildingEscape.LastCompileMethod=Runtime
 PakFile.TimeStamp=2019.07.22-14.15.15
 PakFile.LastCompileMethod=Unknown
@@ -755,7 +755,7 @@ MovieSceneCapture.TimeStamp=2019.07.22-14.15.11
 MovieSceneCapture.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
